OCT-1104 Update onboarding for start of Epoch 2

--- a/client/src/components/dedicated/ModalOnboarding/ModalOnboarding.module.scss
+++ b/client/src/components/dedicated/ModalOnboarding/ModalOnboarding.module.scss
@@ -3,7 +3,7 @@
 }
 
 .bold {
-  @include boldText();
+  font-weight: $font-weight-superbold;
 }
 
 .onboardingModalBody {
@@ -128,8 +128,4 @@
 .buttonClaimGlm {
   width: 100%;
   margin-top: 4.8rem;
-}
-
-.bold {
-  font-weight: $font-weight-bold;
 }
