--- a/client/src/components/core/InputText/InputText.module.scss
+++ b/client/src/components/core/InputText/InputText.module.scss
@@ -36,6 +36,7 @@
   width: 100%;
   height: 100%;
   border: 0;
+  // Hides copy/paste popup on safari mobile when an input value is selected
   -webkit-user-select: none;
 
   &:focus-visible {
