oct-1105 proposal archived state update (rewards)

--- a/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
+++ b/client/src/components/dedicated/ButtonAddToAllocate/ButtonAddToAllocate.module.scss
@@ -13,10 +13,21 @@
     }
   }
 
-  &.isArchivedProposal.isAllocatedTo {
-    svg circle {
-      stroke: $color-octant-grey5;
-      fill: $color-octant-grey5;
+  &.isArchivedProposal {
+    &:hover {
+      background: transparent;
+      cursor: default;
+    }
+
+    svg path {
+      stroke: $color-octant-grey1;
+    }
+
+    &.isAllocatedTo {
+      svg circle {
+        stroke: $color-octant-grey5;
+        fill: $color-octant-grey5;
+      }
     }
   }
 }
