--- a/client/src/components/dedicated/ProposalsList/ProposalsList.module.scss
+++ b/client/src/components/dedicated/ProposalsList/ProposalsList.module.scss
@@ -29,7 +29,7 @@ $elementMargin: 1.6rem;
   border-radius: $border-radius-16;
   margin: 1.6rem 0;
 
-  .epochArchiveEnded {
+  .epochDuration {
     color: $color-octant-grey5;
     font-size: $font-size-12;
     font-weight: $font-weight-medium;
