--- a/client/src/components/dedicated/ProposalsList/ProposalsListItem/ProposalsListItem.module.scss
+++ b/client/src/components/dedicated/ProposalsList/ProposalsListItem/ProposalsListItem.module.scss
@@ -1,5 +1,3 @@
-$proposalItemPadding: 2.4rem;
-
 .root {
   position: relative;
   display: flex;
@@ -64,6 +62,6 @@ $proposalItemPadding: 2.4rem;
   }
 
   .proposalRewards {
-    padding: 0 $proposalItemPadding 0;
+    padding: 0 $proposalItemPadding $proposalItemPadding;
   }
 }
