--- a/client/src/components/dedicated/ProposalsList/ProposalsListItemSkeleton/ProposalsListItemSkeleton.module.scss
+++ b/client/src/components/dedicated/ProposalsList/ProposalsListItemSkeleton/ProposalsListItemSkeleton.module.scss
@@ -9,34 +9,32 @@
   width: 100%;
   bottom: 0;
   transition: bottom $transition-time-4 linear;
-  padding: 2.4rem 2.4rem 2rem 2.4rem;
+  // $proposalItemPadding - 0.2rem to offset separator appearance in ProposalsListItem.
+  padding: $proposalItemPadding $proposalItemPadding ($proposalItemPadding - 0.2rem);
 
   .image {
     @include skeleton();
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.6rem;
   }
 
   .title {
     @include skeleton();
     width: 16rem;
     height: 2rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 1.2rem;
   }
 
   .description {
     @include skeleton();
     width: 100%;
     height: 1.6rem;
+    margin-bottom: 0.8rem;
 
-    &:last-child {
+    &.isLast {
       width: 23.2rem;
-    }
-
-    &:not(:last-child) {
-      margin-bottom: 0.8rem;
     }
   }
 
@@ -49,6 +47,10 @@
       @include skeleton();
       width: 8.8rem;
       height: 1.6rem;
+
+      &.value {
+        height: 2rem;
+      }
 
       &:not(:last-child) {
         margin-bottom: 0.4rem;
