OCT-1134 Window position after closing donors modal

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -47,3 +47,9 @@ body {
     padding-right: 0 !important;
   }
 }
+
+.bodyFixed {
+  position: fixed;
+  top: var(--st, 0);
+  inline-size: 100%;
+}
