--- a/client/src/layouts/MainLayout/MainLayout.module.scss
+++ b/client/src/layouts/MainLayout/MainLayout.module.scss
@@ -18,6 +18,7 @@ $bodyPaddingTopDesktop: calc(2.4rem + $headerMarginTop + $headerHeight);
 
 .headerWrapper {
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: $z-index-3;
 }
