OCT-840 Implement support for Ledger

--- a/client/src/components/shared/Layout/LayoutConnectWallet/LayoutConnectWallet.module.scss
+++ b/client/src/components/shared/Layout/LayoutConnectWallet/LayoutConnectWallet.module.scss
@@ -1,5 +1,7 @@
-.browserWalletTile {
-  margin-bottom: 1.6rem;
+.walletTile {
+  &:not(:last-child) {
+    margin-bottom: 1.6rem;
+  }
 }
 
 .icon {
