--- a/client/src/components/Proposal/ProposalDonorsList/ProposalDonorsList.module.scss
+++ b/client/src/components/Proposal/ProposalDonorsList/ProposalDonorsList.module.scss
@@ -4,12 +4,22 @@
   flex-direction: column;
   flex: 1;
   align-self: stretch;
-  min-height: 21.6rem;
-  padding: 1.8rem 0 2.2rem;
 
-  .donorsItem {
-    &:not(:first-child) {
-      margin-top: 0.4rem;
+  .list {
+    padding: 1.8rem 0;
+    min-height: 21.6rem;
+
+    &.fullList {
+      overflow: auto;
+      padding: 1.8rem 3.2rem 1.8rem;
+    }
+  }
+
+  .totalDonated {
+    border-top: 0.2rem solid $color-octant-grey8;
+
+    &.fullList {
+      margin: 0 3.2rem;
     }
   }
 }
