--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -20,7 +20,9 @@ $color-octant-green-80: rgba(45, 155, 135, 0.8); // used in the metrics chart, n
 $color-octant-green2: #5b8a81;
 $color-octant-green3: #1d4558;
 $color-octant-green4: #d1e7e3; // TODO OCT-1001 Remove this color. It will become unused.
+$color-octant-green5: #f1faf8;
 $color-octant-orange: #ff6157;
 $color-octant-orange2: #ff9601;
 $color-octant-orange3: #f6c54b;
+$color-octant-orange4: #ffefee;
 $color-octant-purple: #685b8a;
