--- a/client/src/components/Allocation/AllocationRewardsBox/AllocationRewardsBox.module.scss
+++ b/client/src/components/Allocation/AllocationRewardsBox/AllocationRewardsBox.module.scss
@@ -1,9 +1,45 @@
 .root {
+  position: relative;
   color: $color-octant-grey5;
+  padding: 1.6rem 2.4rem 2rem;
 }
 
-.slider {
-  margin: 1.2rem 0 0.8rem;
+.title {
+  font-size: $font-size-18;
+  margin-bottom: 0.3rem;
+  color: $color-octant-green;
+
+  &.greyTitle {
+    color: $color-octant-grey5;
+  }
+}
+
+.isManualBadge {
+  position: absolute;
+  top: 1.6rem;
+  right: 1.6rem;
+  border: 0.1rem solid $color-octant-green;
+  padding: 0.2rem 0.5rem;
+  text-transform: uppercase;
+  border-radius: $border-radius-04;
+  color: $color-octant-green;
+  background: $color-octant-green5;
+  line-height: 1.4rem;
+}
+
+.sliderWrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 7.2rem;
+  background-color: $color-octant-grey6;
+  border-radius: $border-radius-08;
+  padding: 0 1.6rem;
+  margin: 2rem 0 0.8rem;
+
+  &.isManuallyEdited {
+    background-color: $color-octant-green5;
+  }
 }
 
 .sections {
@@ -18,11 +54,18 @@
   }
 
   .header {
-    font-size: $font-size-12;
+    line-height: 1.6rem;
+    padding: 0.4rem 0;
   }
 
   .value {
+    line-height: 2rem;
     font-size: $font-size-16;
+    color: $color-octant-dark;
+
+    @media #{$desktop-up} {
+      font-size: $font-size-18;
+    }
   }
 
   &:first-child {
@@ -36,10 +79,18 @@
   &:not(.isDisabled) {
     &:first-child .value {
       color: $color-octant-green;
+
+      &.isDisabled {
+        color: $color-octant-grey5;
+      }
     }
 
     &:last-child .value {
       color: $color-octant-orange2;
+
+      &.isDisabled {
+        color: $color-octant-grey5;
+      }
     }
   }
 }
