--- a/client/src/components/ui/Slider/Slider.module.scss
+++ b/client/src/components/ui/Slider/Slider.module.scss
@@ -1,6 +1,6 @@
 $heightRoot: 4rem;
 $heightRootMobile: 3.2rem;
-$heightTrack: 0.8rem;
+$heightTrack: 0.4rem;
 $thumbSize: $heightRoot;
 $thumbSizeMobile: $heightRootMobile;
 
@@ -76,14 +76,7 @@ $thumbSizeMobile: $heightRootMobile;
   }
 }
 
-.iconTrack {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-.iconWrapper {
+.thumbInnerCircle {
   position: relative;
   display: flex;
   align-items: center;
@@ -97,17 +90,4 @@ $thumbSizeMobile: $heightRootMobile;
     height: calc($thumbSize / 2);
     width: calc($thumbSize / 2);
   }
-}
-
-.pinlock {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 0.7rem;
-  height: 1rem;
-}
-
-.iconLock {
-  z-index: 1;
 }
