--- a/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
+++ b/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
@@ -1,6 +1,4 @@
 .root {
-  padding: 0 5.6rem;
-
   &:not(.areAllocationValuesPositive) {
     padding-bottom: 4rem;
   }
@@ -32,9 +30,76 @@
   display: flex;
   flex-direction: column;
   align-self: stretch;
-  margin: 4rem 0;
 }
 
-.bold {
+.section {
+  height: 6.4rem;
+
+  @media #{$desktop-up} {
+    height: 8rem;
+  }
+
+  .leftSection {
+    text-align: left;
+
+    .label {
+      font-size: $font-size-12;
+      font-weight: $font-weight-bold;
+      color: $color-octant-dark;
+      line-height: 2.4rem;
+
+      .matchFundingLeverage {
+        padding: 0.1rem 0.4rem;
+        border-radius: $border-radius-04;
+        border: 0.1rem solid $color-octant-dark;
+        font-size: $font-size-10;
+        margin-left: 0.8rem;
+      }
+
+      @media #{$desktop-up} {
+        font-size: $font-size-14;
+      }
+    }
+  }
+
+  .rightSection {
+    text-align: right;
+
+    .value {
+      font-size: $font-size-12;
+      font-weight: $font-weight-bold;
+      color: $color-octant-grey5;
+      line-height: 2.4rem;
+    }
+
+    @media #{$desktop-up} {
+      font-size: $font-size-14;
+    }
+  }
+}
+
+.personalRewardBox {
+  height: 6.4rem;
+  margin-top: 1.6rem;
+
+  @media #{$desktop-up} {
+    height: 8rem;
+  }
+}
+
+.personalReward {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.label,
+.value {
+  font-size: $font-size-14;
   font-weight: $font-weight-bold;
+  color: $color-octant-dark;
+
+  @media #{$desktop-up} {
+    font-size: $font-size-16;
+  }
 }
