OCT-1137: Add unique history entry for patron donations: client

--- a/client/src/components/Earn/EarnHistory/EarnHistoryItem/EarnHistoryItem.module.scss
+++ b/client/src/components/Earn/EarnHistory/EarnHistoryItem/EarnHistoryItem.module.scss
@@ -17,3 +17,11 @@
 .title {
   font-size: $font-size-14;
 }
+
+.patronDonationTimestamp {
+  color: $color-octant-grey5;
+  font-size: $font-size-10;
+  font-weight: $font-weight-semibold;
+  margin-top: 0.2rem;
+  line-height: 1.5rem;
+}
