OCT-1173 Implement Allocate V3: add logic

--- a/client/src/components/Allocation/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/Allocation/AllocationItem/AllocationItem.module.scss
@@ -82,4 +82,8 @@ $removeButtonHeightWidthDesktop: 10.4rem;
   &.isEpoch1 {
     opacity: 0.5;
   }
+
+  &.isError {
+    animation: horizontal-shaking 0.25s;
+  }
 }
