--- a/client/src/components/ui/Slider/Slider.module.scss
+++ b/client/src/components/ui/Slider/Slider.module.scss
@@ -86,6 +86,10 @@ $thumbSizeMobile: $heightRootMobile;
   background: $color-octant-grey8;
   border-radius: 50%;
 
+  &.isError {
+    animation: pulsatingBackground 1.5s;
+  }
+
   @media #{$desktop-up} {
     height: calc($thumbSize / 2);
     width: calc($thumbSize / 2);
