--- a/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
+++ b/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
@@ -3,7 +3,7 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   color: $color-octant-orange;
   font-size: $font-size-12;
   font-weight: $font-weight-semibold;
