--- a/client/src/styles/utils/_keyframes.scss
+++ b/client/src/styles/utils/_keyframes.scss
@@ -36,10 +36,26 @@
   100% { transform: translateX(0) }
 }
 
-@keyframes pulsatingBackground {
+@keyframes pulsatingBackgroundGreyOrange {
   0% { background: $color-octant-grey8; }
   25% { background: $color-octant-orange; }
   50% { background: $color-octant-grey8; }
   75% { background: $color-octant-orange; }
   100% { background: $color-octant-grey8; }
+}
+
+@keyframes pulsatingOpacity {
+   0% { opacity: 1 }
+   25% { opacity: 0.5 }
+   50% { opacity: 0 }
+   75% { opacity: 0.5 }
+   100% { opacity: 1 }
+ }
+
+@keyframes movingLeftAndRight {
+  0% { left: -100% }
+  25% { left: 0 }
+  50% { left: 100% }
+  75% { left: 75% }
+  100% { left: -100% }
 }
