--- a/client/src/components/ui/InputText/InputText.module.scss
+++ b/client/src/components/ui/InputText/InputText.module.scss
@@ -56,7 +56,7 @@
         height: 4.8rem;
         font-size: $font-size-14;
         font-weight: $font-weight-bold;
-        background: $color-white;
+        background: $color-octant-grey6;
         border-radius: $border-radius-08;
         padding: 0 0.8rem 0 0.8rem;
 
