OCT-1211 Implement Allocate V3: feed summary view w/ data

--- a/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
+++ b/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
@@ -99,6 +99,10 @@
   font-weight: $font-weight-bold;
   color: $color-octant-dark;
 
+  &.isLoading {
+    @include skeleton();
+  }
+
   @media #{$desktop-up} {
     font-size: $font-size-16;
   }
