--- a/client/src/components/Allocation/AllocationSummaryProject/AllocationSummaryProject.module.scss
+++ b/client/src/components/Allocation/AllocationSummaryProject/AllocationSummaryProject.module.scss
@@ -23,6 +23,10 @@
       &.isDonationAboveThreshold {
         color: $color-octant-green;
       }
+
+      &.isLoadingAllocateSimulate {
+        color: $color-octant-grey5;
+      }
     }
   }
 
