--- a/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
+++ b/client/src/components/Allocation/AllocationSummary/AllocationSummary.module.scss
@@ -50,10 +50,19 @@
 
       .matchFundingLeverage {
         padding: 0.1rem 0.4rem;
-        border-radius: $border-radius-04;
-        border: 0.1rem solid $color-octant-dark;
         font-size: $font-size-10;
         margin-left: 0.8rem;
+
+        &.isLoading {
+          @include skeleton();
+          width: 3rem;
+          height: 2.4rem;
+        }
+
+        &:not(.isLoading) {
+          border-radius: $border-radius-04;
+          border: 0.1rem solid $color-octant-dark;
+        }
       }
 
       @media #{$desktop-up} {
@@ -95,15 +104,27 @@
 
 .label,
 .value {
+  display: flex;
+  align-items: center;
   font-size: $font-size-14;
   font-weight: $font-weight-bold;
   color: $color-octant-dark;
 
   &.isLoading {
     @include skeleton();
+    height: 2.4rem;
+    width: 10rem;
   }
 
   @media #{$desktop-up} {
     font-size: $font-size-16;
   }
+}
+
+.label {
+  justify-content: flex-start;
+}
+
+.value {
+  justify-content: flex-end;
 }
