feat: adjustment for error handling: disable inputs, empty progress bar

--- a/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
+++ b/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
@@ -52,6 +52,10 @@
       background: $color-octant-green;
     }
 
+    &.isError {
+      width: 0;
+    }
+
     &.isPulsing {
       animation: pulsatingOpacity 1s linear infinite;
     }
