feat: opacity 0.5 for rest of the tiles when one of them is error

--- a/client/src/components/Allocation/AllocationItem/AllocationItem.module.scss
+++ b/client/src/components/Allocation/AllocationItem/AllocationItem.module.scss
@@ -47,6 +47,10 @@ $removeButtonHeightWidthDesktop: 10.4rem;
 .boxRoundedChildren {
   display: flex;
   justify-content: space-between;
+
+  &.isThereAnyError {
+    opacity: 0.5;
+  }
 }
 
 .projectData {
