--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './fonts.css';
 
-:root {
+:root, input {
+  // Direct input to prevent useragent override.
   font-family: 'Inter', sans-serif;
   font-weight: 400;
 }
