OCT-1236 Implement Allocate V3: Fixes to Allocation tile display

--- a/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
+++ b/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
@@ -13,15 +13,11 @@
     font-size: $font-size-10;
   }
 
-  &.isThresholdUnknown {
-    color: $color-octant-grey5;
-  }
-
   &.isDonationAboveThreshold {
     color: $color-octant-green;
   }
 
-  &.isLoadingAllocateSimulate {
+  &.isLoadingAllocateSimulate, &.isSimulateVisible {
     color: $color-octant-grey5;
   }
 }
