--- a/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
+++ b/client/src/components/Allocation/AllocationItemRewards/AllocationItemRewards.module.scss
@@ -4,18 +4,24 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  color: $color-octant-orange;
   font-size: $font-size-12;
   font-weight: $font-weight-semibold;
+  color: $color-octant-grey5;
   line-height: 2.4rem;
+
+  &.isRewardsDataDefined {
+    &:not(.isDonationAboveThreshold) {
+      color: $color-octant-orange;
+    }
+    &.isDonationAboveThreshold {
+      color: $color-octant-green;
+    }
+  }
 
   @media #{$tablet-down} {
     font-size: $font-size-10;
   }
 
-  &.isDonationAboveThreshold {
-    color: $color-octant-green;
-  }
 
   &.isLoadingAllocateSimulate, &.isSimulateVisible {
     color: $color-octant-grey5;
