--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -19,8 +19,9 @@ $transition-time-5: 0.15s;
 $z-index-2: 2;
 $z-index-3: 3;
 $z-index-4: 4;
-$z-index-5: 5; // overlays
-$z-index-6: 6; // modals
+$z-index-5: 5;
+$z-index-6: 6; // overlays
+$z-index-7: 7; // modals
 
 // distances
 $headerHeight: 7.2rem;
