--- a/client/src/components/Earn/EarnBoxGlmLock/EarnBoxGlmLock.module.scss
+++ b/client/src/components/Earn/EarnBoxGlmLock/EarnBoxGlmLock.module.scss
@@ -11,3 +11,7 @@
   background: $color-octant-grey8;
   border-radius: $border-radius-10;
 }
+
+.effectiveTooltip {
+  padding: 1.8rem 1.4rem 1.4rem 2.4rem !important;
+}
